--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -21,7 +21,7 @@
       >
         <div *ngIf="selectedExperimentFilterOption !== 'status'">
           <input
-            class="search-input ft-14-400"
+            class="ft-14-400 search-input"
             matInput
             #searchInput
             [(ngModel)]="searchValue"
@@ -31,7 +31,7 @@
         </div>
         <div *ngIf="selectedExperimentFilterOption === 'status'">
           <input
-            class="search-input ft-14-400"
+            class="ft-14-400 search-input"
             matInput
             #searchInput
             [(ngModel)]="searchValue"
