--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
@@ -29,7 +29,7 @@
         <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
       </mat-table>
 
-      <span class="warn-msg">
+      <span class="ft-14-400 warn-msg">
         {{ 'home.import-experiment.multiple-files-import.warning.message.text' | translate }}
       </span>
     </ng-container>
