--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/duplicate-segment/duplicate-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/duplicate-segment/duplicate-segment.component.scss
@@ -1,6 +1,10 @@
 .duplicate-segment-dialog {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+
   .name {
-    width: 70%;
+    width: 100%;
     line-height: 18px;
 
     &-input {
