--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/components/flag-variations/flag-variations.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/components/flag-variations/flag-variations.component.html
@@ -17,7 +17,9 @@
         {{ 'feature-flags.global-variation-value.text' | translate }}
       </mat-header-cell>
       <mat-cell *matCellDef="let element; let groupIndex = index" [formGroupName]="groupIndex">
-        <mat-form-field floatLabel="never" class="form-control">
+        <mat-form-field
+          class="form-control"
+        >
           <input
             matInput
             [placeholder]="'feature-flags.global-variation-value.text' | translate"
@@ -33,7 +35,9 @@
         {{ 'feature-flags.global-name.text' | translate }}
       </mat-header-cell>
       <mat-cell *matCellDef="let element; let groupIndex = index" [formGroupName]="groupIndex">
-        <mat-form-field floatLabel="never" class="form-control">
+        <mat-form-field
+          class="form-control"
+        >
           <input matInput [placeholder]="'feature-flags.global-name.text' | translate" formControlName="name" />
         </mat-form-field>
       </mat-cell>
@@ -45,7 +49,9 @@
         {{ 'feature-flags.variation-description.text' | translate }}
       </mat-header-cell>
       <mat-cell *matCellDef="let element; let groupIndex = index" [formGroupName]="groupIndex">
-        <mat-form-field floatLabel="never" class="form-control">
+        <mat-form-field
+          class="form-control"
+        >
           <input
             matInput
             [placeholder]="'feature-flags.variation-description.text' | translate"
@@ -79,7 +85,7 @@
     <mat-header-row *matHeaderRowDef="variationDisplayedColumns; sticky: true"></mat-header-row>
     <mat-row *matRowDef="let row; columns: variationDisplayedColumns"></mat-row>
   </mat-table>
-  <mat-error class="ft-14-600 validation-message" *ngIf="variationError">{{ variationError }}</mat-error>
+  <mat-error class="ft-14-400 validation-message" *ngIf="variationError">{{ variationError }}</mat-error>
 
   <button
     type="button"
@@ -92,26 +98,30 @@
 
   <div class="property-container">
     <mat-label class="ft-16-600 label">{{ 'feature-flags.variation-default-variation.text' | translate }}</mat-label>
-    <mat-form-field class="dense-2 default-on-variation">
+    <mat-form-field
+      class="dense-2 default-on-variation"
+    >
       <mat-label>{{ 'feature-flags.variation-on.text' | translate }}</mat-label>
       <mat-select formControlName="defaultOnVariation">
         <mat-option *ngFor="let type of getVariationValues()" [value]="type">
           {{ type }}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="flagVariationsForm.controls.defaultOnVariation.hasError('required')">
+      <mat-error class="ft-14-400" *ngIf="flagVariationsForm.controls.defaultOnVariation.hasError('required')">
         {{ 'feature-flags.variation-on-error.text' | translate }}
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="dense-2 default-off-variation">
+    <mat-form-field
+      class="dense-2 default-off-variation"
+    >
       <mat-label>{{ 'feature-flags.variation-off.text' | translate }}</mat-label>
       <mat-select formControlName="defaultOffVariation">
         <mat-option *ngFor="let type of getVariationValues()" [value]="type">
           {{ type }}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="flagVariationsForm.controls.defaultOffVariation.hasError('required')">
+      <mat-error class="ft-14-400" *ngIf="flagVariationsForm.controls.defaultOffVariation.hasError('required')">
         {{ 'feature-flags.variation-off-error.text' | translate }}
       </mat-error>
     </mat-form-field>
