--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/new-user/new-user.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/new-user/new-user.component.html
@@ -9,7 +9,7 @@
           [placeholder]="'profile.table.firstName.text' | translate"
           formControlName="firstName"
         />
-        <mat-error *ngIf="newUserForm.controls.firstName.hasError('required')">
+        <mat-error class="ft-14-400" *ngIf="newUserForm.controls.firstName.hasError('required')">
           {{ 'profile.new-user.firstName-required-error.text' | translate }}
         </mat-error>
       </mat-form-field>
@@ -20,7 +20,7 @@
           [placeholder]="'profile.table.lastName.text' | translate"
           formControlName="lastName"
         />
-        <mat-error *ngIf="newUserForm.controls.lastName.hasError('required')">
+        <mat-error class="ft-14-400" *ngIf="newUserForm.controls.lastName.hasError('required')">
           {{ 'profile.new-user.lastName-required-error.text' | translate }}
         </mat-error>
       </mat-form-field>
@@ -31,7 +31,7 @@
           [placeholder]="'profile.global.email.text' | translate"
           formControlName="email"
         />
-        <mat-error *ngIf="newUserForm.controls.email.hasError('required')">
+        <mat-error class="ft-14-400" *ngIf="newUserForm.controls.email.hasError('required')">
           {{ 'profile.new-user.email-required-error.text' | translate }}
         </mat-error>
       </mat-form-field>
@@ -42,12 +42,12 @@
             {{ role | titlecase }}
           </mat-option>
         </mat-select>
-        <mat-error *ngIf="newUserForm.controls.role.hasError('required')">
+        <mat-error class="ft-14-400" *ngIf="newUserForm.controls.role.hasError('required')">
           {{ 'profile.new-user.role-required-error.text' | translate }}
         </mat-error>
       </mat-form-field>
     </form>
-    <span class="ft-14-600 validation-message" *ngIf="isUserExist">
+    <span class="ft-14-400 validation-message" *ngIf="isUserExist">
       {{ 'profile.new-user.email-exist-error.text' | translate }}
     </span>
   </div>
