--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -1,16 +1,25 @@
 <mat-card appearance="raised" class="segments-list-container">
   <div class="header">
     <div>
-      <mat-form-field class="dense-2 filter-options">
-        <mat-select class="ft-16-600" [(ngModel)]="selectedExperimentFilterOption">
-          <mat-option *ngFor="let filterOption of experimentFilterOptions" [value]="filterOption">
+      <mat-form-field
+        class="dense-2 filter-options"
+        subscriptSizing="dynamic"
+      >
+        <mat-select
+          class="ft-14-400"
+          [(ngModel)]="selectedExperimentFilterOption"
+        >
+          <mat-option class="ft-14-400" *ngFor="let filterOption of experimentFilterOptions" [value]="filterOption">
             {{ filterOption | titlecase }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field class="dense-2">
+      <mat-form-field
+        class="dense-2"
+        subscriptSizing="dynamic"
+      >
         <input
-          class="search-input ft-16-400"
+          class="ft-14-400 search-input"
           matInput
           #searchInput
           [(ngModel)]="searchValue"
