Update mat-mdc-form-field style for the rest

--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -15,6 +15,11 @@
     .search-input {
       line-height: 20px;
     }
+
+    .search-icon {
+      margin-top: -6px;
+      height: 16px;
+    }
   }
 
   .spinner {
