--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -25,7 +25,7 @@
           [(ngModel)]="searchValue"
           [placeholder]="'global.search.text' | translate"
         />
-        <mat-icon matSuffix>search</mat-icon>
+        <mat-icon class="search-icon" matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
     <div>
