--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/profile-info/profile-info.component.html
@@ -13,7 +13,7 @@
     <div class="toggle-container">
       <mat-slide-toggle
         *ngIf="(permissions$ | async)?.manageRoles.update"
-        class="ft-16-600 toggle"
+        class="ft-13-700 toggle"
         color="primary"
         [checked]="toCheckAuth$ | async"
         (change)="setToCheckAuth($event)"
@@ -24,7 +24,7 @@
       <!-- TODO: Uncomment if we want filter metric toggle -->
       <!-- <mat-slide-toggle
         *ngIf="(permissions$ | async)?.manageRoles.update"
-        class="ft-16-600 toggle"
+        class="ft-13-700 toggle"
         color="primary"
         [checked]="toFilterMetric$ | async"
         (change)="setToFilterMetric($event)"
@@ -43,27 +43,33 @@
       </button>
     </div>
     <div>
-      <mat-form-field class="dense-2 filter-options">
+      <mat-form-field
+        class="dense-2 filter-options"
+        subscriptSizing="dynamic"
+      >
         <mat-select
-          class="ft-16-600"
+          class="ft-14-400"
           [(ngModel)]="selectedUserFilterOption"
           (selectionChange)="applyFilter(searchString); setSearchKey()"
         >
-          <mat-option *ngFor="let filterOption of userFilterOptions" [value]="filterOption.value">
+          <mat-option class="ft-14-400" *ngFor="let filterOption of userFilterOptions" [value]="filterOption.value">
             {{ filterOption.viewValue | titlecase }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field class="dense-2 ft-14-600 input">
+      <mat-form-field
+        class="dense-2 input"
+        subscriptSizing="dynamic"
+      >
         <input
-          class="ft-14-600 input"
+          class="ft-14-400 input"
           #searchInput
           matInput
           [(ngModel)]="searchString"
           (keyup)="applyFilter($event.target.value)"
           [placeholder]="'global.search.text' | translate"
         />
-        <mat-icon matSuffix>search</mat-icon>
+        <mat-icon class="search-icon" matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
     <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isUsersLoading"></mat-progress-bar>
@@ -84,10 +90,14 @@
             </th>
             <td class="ft-12-600" mat-cell *matCellDef="let user; let index = index">
               <div *ngIf="editMode === index; else firstNameReadOnly">
-                <mat-form-field class="dense-2 ft-14-600 input">
+                <mat-form-field
+                  class="dense-2 input"
+                  appearance="outline"
+                  subscriptSizing="dynamic"
+                >
                   <input
-                    matInput
                     class="ft-14-400"
+                    matInput
                     [placeholder]="'profile.table.firstName.text' | translate"
                     formControlName="firstName"
                   />
@@ -108,10 +118,14 @@
             </th>
             <td class="ft-12-600" mat-cell *matCellDef="let user; let index = index">
               <div *ngIf="editMode === index; else lastNameReadOnly">
-                <mat-form-field class="dense-2 ft-14-600 input">
+                <mat-form-field
+                  class="dense-2 input"
+                  appearance="outline"
+                  subscriptSizing="dynamic"
+                >
                   <input
-                    matInput
                     class="ft-14-400"
+                    matInput
                     [placeholder]="'profile.table.lastName.text' | translate"
                     formControlName="lastName"
                   />
@@ -144,10 +158,17 @@
             </th>
             <td class="ft-12-600" mat-cell *matCellDef="let user; let index = index">
               <div *ngIf="editMode === index; else roleReadOnly">
-                <mat-form-field class="dense-2 ft-14-600 input">
-                  <mat-label>{{ 'profile.form.role-control.text' | translate }}</mat-label>
-                  <mat-select class="ft-14-600 input" formControlName="role">
-                    <mat-option *ngFor="let role of userRoles" [value]="role">
+                <mat-form-field
+                  class="dense-2 input"
+                  appearance="outline"
+                  subscriptSizing="dynamic"
+                >
+                  <mat-select
+                    class="ft-14-400 input"
+                    formControlName="role"
+                    [placeholder]="'profile.form.role-control.text' | translate"
+                  >
+                    <mat-option class="ft-14-400" *ngFor="let role of userRoles" [value]="role">
                       {{ role | titlecase }}
                     </mat-option>
                   </mat-select>
