Set letter-spacing to normal for mat-mdc-cell

--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -363,6 +363,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
     .mat-mdc-cell {
       background-color: transparent;
       border-bottom: none;
+      letter-spacing: normal;
 
       .mat-mdc-form-field .mdc-text-field {
         padding: 0 8px;
