Update close confirm message font size

--- a/frontend/projects/upgrade/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.html
+++ b/frontend/projects/upgrade/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
   <section class="close-confirm-msg-container">
-    <span class="ft-18-600 content-span">
+    <span class="ft-16-600">
       {{ 'home.experiments-edit.confirm-close.text' | translate }}
     </span>
   </section>
