--- a/frontend/projects/upgrade/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.scss
+++ b/frontend/projects/upgrade/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.scss
@@ -3,6 +3,7 @@
 
   .close-confirm-msg-container {
     padding: 0px 0px 30px;
+    color: var(--black-2);
   }
 
   .shared-modal--buttons-container {
