Update delete stratification modal

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/delete-stratification/delete-stratification.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/delete-stratification/delete-stratification.component.html
@@ -2,7 +2,7 @@
   <span class="ft-24-700 title">{{ 'stratifications.delete-stratification.text' | translate | titlecase }}</span>
 
   <div class="delete-stratification-body">
-    <span class="confirmation-msg">
+    <span class="ft-16-400 confirmation-msg">
       {{ 'stratifications.delete-stratification.message.text' | translate }} "{{ data.factor }}"?
     </span>
   </div>
