--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.theme.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.theme.scss
@@ -1,4 +1,4 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 @mixin segment-experiment-list-modal-component-theme($theme) {
   $background: map-get($theme, background);
@@ -6,12 +6,12 @@
 
   .segment-experiment-list-modal {
     .title {
-      box-shadow: 0 0 8px 0 mat-color($background, shadow-color);
+      box-shadow: 0 0 8px 0 mat.get-color-from-palette($background, shadow-color);
     }
 
     .segment-experiment-list-modal {
       .icon {
-        color: mat-color($foreground, icon);
+        color: mat.get-color-from-palette($foreground, icon);
       }
     }
   }
