--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.theme.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.theme.scss
@@ -1,4 +1,4 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 @mixin segment-members-component-theme($theme) {
   $foreground: map-get($theme, foreground);
@@ -6,7 +6,7 @@
   .segment-member {
     .member-table {
       .remove-icon {
-        color: mat-color($foreground, icon);
+        color: mat.get-color-from-palette($foreground, icon);
       }
     }
   }
