--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.theme.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.theme.scss
@@ -1,34 +1,34 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 @mixin view-segment-component-theme($theme) {
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
   .segment-container {
-    background-color: mat-color($background, background);
+    background-color: mat.get-color-from-palette($background, background);
 
     .segment-link {
-      color: mat-color($foreground, text);
+      color: mat.get-color-from-palette($foreground, text);
     }
 
     .segment {
-      box-shadow: 0 0 8px 0 mat-color($background, shadow-color);
+      box-shadow: 0 0 8px 0 mat.get-color-from-palette($background, shadow-color);
 
       &-info {
-        box-shadow: 0 8px 8px -8px mat-color($background, shadow-color);
+        box-shadow: 0 8px 8px -8px mat.get-color-from-palette($background, shadow-color);
 
         .action-buttons {
           .button {
-            background-color: mat-color($background, background);
+            background-color: mat.get-color-from-palette($background, background);
           }
           .button-long {
-            background-color: mat-color($background, background);
+            background-color: mat.get-color-from-palette($background, background);
           }
         }
       }
 
       &-secondary-info {
-        box-shadow: 0 8px 8px -8px mat-color($background, shadow-color);
+        box-shadow: 0 8px 8px -8px mat.get-color-from-palette($background, shadow-color);
       }
     }
   }
