--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/segments-root/segments-root.theme.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/segments-root/segments-root.theme.scss
@@ -1,4 +1,4 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 @mixin segments-root-component-theme($theme) {
   $background: map-get($theme, background);
@@ -6,7 +6,7 @@
   .segments-container {
     .segments-table,
     .no-segments-container {
-      box-shadow: 0 0 8px 0 mat-color($background, shadow-color);
+      box-shadow: 0 0 8px 0 mat.get-color-from-palette($background, shadow-color);
     }
   }
 }
