Refine table styles

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.scss
@@ -45,6 +45,8 @@
       }
 
       .mat-mdc-header-cell {
+        background-color: var(--white);
+
         &.mat-column-totalAssignedConditions {
           text-align: center;
         }
