--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.scss
@@ -78,6 +78,7 @@ $experiment-state-light-color: #8f9bb3;
     .mat-mdc-header-cell {
       padding: 10px 5px;
       word-break: break-word;
+      background-color: var(--white);
 
       &.cdk-column-name {
         width: 15%;
