--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.scss
@@ -71,6 +71,7 @@
       padding: 10px 5px;
       width: 20%;
       word-break: break-word;
+      background-color: var(--white);
     }
 
     .mat-mdc-header-cell {
