--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -56,6 +56,8 @@
       }
 
       .mat-mdc-header-cell {
+        color: var(--grey-2);
+
         &.mat-column-metric {
           padding-left: 20px;
         }
