--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -56,6 +56,7 @@
       }
 
       .mat-mdc-header-cell {
+        background-color: var(--white);
         color: var(--grey-2);
 
         &.mat-column-metric {
