resolved issue of segment members getting deleted when clicked on disabled import member button

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.html
@@ -61,7 +61,7 @@
 
       <ng-container matColumnDef="removeMember">
         <mat-header-cell class="ft-12-600 import-csv" [ngClass]="{ 'disabled': !isImportMembervalid }" aria-hidden="true" (click)="fileInput.click()" *matHeaderCellDef>
-          <mat-icon class="upload-icon" (click)="removeMember(groupIndex)">
+          <mat-icon class="upload-icon">
             upload_2
           </mat-icon>
           {{ 'users.stratification-users-import-csv.text' | translate }}
