QA bugs of import/export segment csv resolved (#1293)
* resolved issue of removing empty row when import members, same file not being imported second time and import button available on multiple empty rows

* resolved the issue with import segment csv

* resolved issue of segment members getting deleted when clicked on disabled import member button

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.html
@@ -60,8 +60,8 @@
       </ng-container>
 
       <ng-container matColumnDef="removeMember">
-        <mat-header-cell class="ft-12-600 import-csv" [ngClass]="{ 'disabled': !isImportMemebervalid }" aria-hidden="true" (click)="fileInput.click()" *matHeaderCellDef>
-          <mat-icon class="upload-icon" (click)="removeMember(groupIndex)">
+        <mat-header-cell class="ft-12-600 import-csv" [ngClass]="{ 'disabled': !isImportMembervalid }" aria-hidden="true" (click)="fileInput.click()" *matHeaderCellDef>
+          <mat-icon class="upload-icon">
             upload_2
           </mat-icon>
           {{ 'users.stratification-users-import-csv.text' | translate }}
@@ -70,7 +70,7 @@
             accept=".csv"
             type="file"
             #fileInput
-            [disabled]="!isImportMemebervalid"
+            [disabled]="!isImportMembervalid"
             file-input
             (change)="onFileSelected($event)"
           />
