--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
@@ -13,7 +13,7 @@
           <ng-container matColumnDef="File Name">
             <mat-header-cell class="ft-12-700" *matHeaderCellDef> File Name </mat-header-cell>
             <mat-cell class="ft-12-600" *matCellDef="let element">
-              {{ element.filename }}
+              {{ element.fileName }}
             </mat-cell>
           </ng-container>
 
@@ -45,9 +45,9 @@
       class="shared-modal--modal-btn default-button"
       [ngClass]="{
         'default-button--disabled':
-          uploadedFileCount === 0 || (uploadedFileCount === 1 && (!experimentInfo || !isExperimentJSONValid)) || this.isLoadingExperiments$
+          uploadedFileCount === 0 || nonErrorExperiments.length === 0 || this.isLoadingExperiments$
       }"
-      [disabled]="uploadedFileCount === 0 || (uploadedFileCount === 1 && (!experimentInfo || !isExperimentJSONValid)) || this.isLoadingExperiments$"
+      [disabled]="uploadedFileCount === 0 || nonErrorExperiments.length === 0 || this.isLoadingExperiments$"
       (click)="importExperiment()"
     >
       {{ 'global.import.text' | translate }}
