--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
@@ -45,9 +45,9 @@
       class="shared-modal--modal-btn default-button"
       [ngClass]="{
         'default-button--disabled':
-          uploadedFileCount === 0 || nonErrorExperiments.length === 0 || this.isLoadingExperiments$
+          uploadedFileCount === 0 || nonErrorExperiments === 0 || this.isLoadingExperiments$
       }"
-      [disabled]="uploadedFileCount === 0 || nonErrorExperiments.length === 0 || this.isLoadingExperiments$"
+      [disabled]="uploadedFileCount === 0 || nonErrorExperiments === 0 || this.isLoadingExperiments$"
       (click)="importExperiment()"
     >
       {{ 'global.import.text' | translate }}
