--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
@@ -10,12 +10,7 @@
       <div class="list-item-container">
         <mat-list class="list">
           <mat-list-item *ngFor="let link of routeLinks">
-            <a
-              class="nav-item"
-              routerLinkActive="selected"
-              [routerLink]="link.path"
-              #linkInfo="routerLinkActive"
-            >
+            <a class="nav-item" routerLinkActive="selected" [routerLink]="link.path" #linkInfo="routerLinkActive">
               <mat-icon class="icon">{{ link.iconType }}</mat-icon>
               <span class="ft-16-600 list-item-label">{{ link.text | translate }}</span>
             </a>
@@ -30,7 +25,9 @@
             >
               <a class="profile" [routerLink]="['/profile']">
                 <img src="{{ user?.imageUrl }}" class="user-pic" referrerpolicy="no-referrer" />
-                <span class="ft-16-600 list-item-label">{{ (user?.firstName || '') + ' ' + (user?.lastName || '') }}</span>
+                <span class="ft-16-600 list-item-label">{{
+                  (user?.firstName || '') + ' ' + (user?.lastName || '')
+                }}</span>
               </a>
             </mat-list-item>
             <mat-list-item class="user-list--item">
@@ -38,6 +35,9 @@
                 <mat-icon class="icon">exit_to_app</mat-icon>
                 <span class="ft-16-600 list-item-label">{{ 'home-global.sign-out.text' | translate }}</span>
               </a>
+            </mat-list-item>
+            <mat-list-item class="user-list--item">
+              <button mat-button (click)="openTestDialog()">Open Dialog</button>
             </mat-list-item>
           </mat-list>
         </div>
