--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.scss
@@ -70,7 +70,7 @@
 
         .condition-selection {
           max-height: 100px;
-          overflow: scroll;
+          overflow: auto;
 
           .condition-container {
             margin-bottom: 10px;
@@ -97,7 +97,7 @@
 
         .assigned-condition-list {
           max-height: 100px;
-          overflow: scroll;
+          overflow: visible;
 
           .assigned-condition-info {
             display: flex;
