--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -3,7 +3,7 @@
 @import '@danielmoncada/angular-datetime-picker/assets/style/picker.min.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap');
-
+@import '~jsoneditor/dist/jsoneditor.min.css';
 @include mat.all-component-typographies();
 @include mat.core();
 
@@ -41,6 +41,7 @@
 @import './app/features/dashboard/home/components/modal/queries-modal/queries-modal.theme.scss';
 @import './app/shared/components/query-result/query-result.theme.scss';
 @import './app/features/dashboard/profile/components/metrics/metrics.theme.scss';
+@import './app/features/dashboard/profile/components/modals/add-metrics/add-metrics.theme.scss';
 @import './app/features/dashboard/home/components/experiment-query-result/experiment-query-result.theme.scss';
 @import './app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-ending-criteria.theme.scss';
 @import './app/features/dashboard/home/components/modal/import-experiment/import-experiment.theme.scss';
@@ -81,6 +82,7 @@
   @include queries-modal-component-theme($theme);
   @include query-result-component-theme($theme);
   @include metrics-component-theme($theme);
+  @include add-metrics-component-theme($theme);
   @include experiment-query-result-component-theme($theme);
   @include experiment-ending-criteria-component-theme($theme);
   @include import-experiment-component-theme($theme);
@@ -143,6 +145,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
 .queries-modal,
 .export-modal,
 .query-result,
+.add-metric-modal,
 .duplicate-segment-modal,
 .experiment-ending-criteria {
   @include custom-components-theme($light-theme);
@@ -203,7 +206,8 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   width: 500px;
 }
 
-.experiment-general-modal {
+.experiment-general-modal,
+.add-metric-modal {
   width: 804px;
   min-height: 294px;
 }
