rearrange playground component placement and naming

--- a/frontend/projects/upgrade/src/app/shared/components/common-form-dialog/common-form-dialog.component.html
+++ b/frontend/projects/upgrade/src/app/shared/components/common-form-dialog/common-form-dialog.component.html
@@ -1,4 +1,4 @@
-<mat-card class="general-form-modal">
+<mat-card class="common-form-dialog">
   <!-- top part of the dialog -->
   <mat-card-header class="header-container">
     <mat-card-title class="header-title">{{ title }}</mat-card-title>
