--- a/frontend/projects/upgrade/src/app/shared/components/common-form-dialog/common-form-dialog.component.scss
+++ b/frontend/projects/upgrade/src/app/shared/components/common-form-dialog/common-form-dialog.component.scss
@@ -1,4 +1,4 @@
-.general-form-modal {
+.common-form-dialog {
   background-color: #fff;
   width: 734px;
   height: 553px;
@@ -36,6 +36,5 @@
     .dialog-action-btn {
       margin-left: 20px;
     }
-
   }
 }
