--- a/frontend/projects/upgrade/src/styles/variables.scss
+++ b/frontend/projects/upgrade/src/styles/variables.scss
@@ -1,5 +1,4 @@
 :root {
-
   /* color variables */
   --blue: #3366ff;
   --light-blue: #7194ff;
@@ -8,12 +7,12 @@
   --white: #fff;
   --grey: #808080;
   --grey-2: #8992a3;
-  --grey-3: #929FAE;
-  --grey-4: #959DAC;
-  --grey-5: #939BAB;
+  --grey-3: #929fae;
+  --grey-4: #959dac;
+  --grey-5: #939bab;
   --grey-6: #6e6f72;
   --light-grey: #d3d3d3;
-  --grey-message: #8F9BB3;
+  --grey-message: #8f9bb3;
   --red: #ff0000;
   --green: #008000;
 
