--- a/frontend/projects/component-playground/src/app/app.component.html
+++ b/frontend/projects/component-playground/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="playground">
-  <!-- when popping the dialog, need to be able to paramatarize the title, primary action button label, and the form fields -->
   <section class="button-section">
     <button
       mat-button
@@ -7,15 +6,7 @@
     >Open Dialog</button>
   </section>
 
-  <!-- to view the template without needing to click the button -->
   <section class="component-section">
-
-
-    <!-- <app-general-form-modal
-      title="Add Feature Flag"
-      primaryActionBtnLabel="Create"
-      (primaryActionBtnClicked)="consoleLog($event)"
-      (cancelBtnClicked)="consoleLog($event)"
-    ></app-general-form-modal> -->
+    <!-- to view a component without needing to click the button, put it in here and it will be centered-->
   </section>
 </div>
