Solve import segment UI spinner bugs

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.scss
@@ -34,4 +34,12 @@
     justify-content: flex-end;
     padding: 0 40px 40px;
   }
+
+  .loading-container {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+  }
 }
