--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
@@ -6,27 +6,29 @@
       {{ 'segments.import-segmemt.message.text' | translate }}
     </p>
     <input accept=".json" type="file" multiple class="ft-14-400 file-input" (change)="uploadFile($event)" />
-    <ng-container *ngIf="importFileErrors.length">
-      <mat-table class="table" [dataSource]="importFileErrorsDataSource">
-        <!-- File Name -->
-        <ng-container matColumnDef="File Name">
-          <mat-header-cell class="ft-12-700" *matHeaderCellDef> File Name </mat-header-cell>
-          <mat-cell class="ft-12-600" *matCellDef="let element">
-            {{ element.fileName }}
-          </mat-cell>
-        </ng-container>
+    <ng-container *ngIf="!isLoadingSegments$; else loadingSegmentState">
+      <ng-container *ngIf="importFileErrors.length">
+        <mat-table class="table" [dataSource]="importFileErrorsDataSource">
+          <!-- File Name -->
+          <ng-container matColumnDef="File Name">
+            <mat-header-cell class="ft-12-700" *matHeaderCellDef> File Name </mat-header-cell>
+            <mat-cell class="ft-12-600" *matCellDef="let element">
+              {{ element.fileName }}
+            </mat-cell>
+          </ng-container>
 
-        <!-- Error -->
-        <ng-container matColumnDef="Error">
-          <mat-header-cell class="ft-12-700" *matHeaderCellDef> Error/Warning </mat-header-cell>
-          <mat-cell class="ft-12-600" *matCellDef="let element">
-            {{ element.error }}
-          </mat-cell>
-        </ng-container>
+          <!-- Error -->
+          <ng-container matColumnDef="Error">
+            <mat-header-cell class="ft-12-700" *matHeaderCellDef> Error/Warning </mat-header-cell>
+            <mat-cell class="ft-12-600" *matCellDef="let element">
+              {{ element.error }}
+            </mat-cell>
+          </ng-container>
 
-        <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-      </mat-table>
+          <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+        </mat-table>
+      </ng-container>
     </ng-container>
   </div>
 
@@ -50,3 +52,9 @@
     </button>
   </div>
 </div>
+
+<ng-template #loadingSegmentState>
+  <div class="loading-container">
+    <mat-spinner diameter="60"></mat-spinner>
+  </div>
+</ng-template>
