--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -7,9 +7,10 @@
       >
         <mat-select
           class="ft-14-400"
-          [(ngModel)]="selectedExperimentFilterOption"
+          [(ngModel)]="selectedSegmentFilterOption"
+          (selectionChange)="applyFilter(searchValue)"
         >
-          <mat-option class="ft-14-400" *ngFor="let filterOption of experimentFilterOptions" [value]="filterOption">
+          <mat-option class="ft-14-400" *ngFor="let filterOption of segmentFilterOptions" [value]="filterOption">
             {{ filterOption | titlecase }}
           </mat-option>
         </mat-select>
@@ -23,6 +24,7 @@
           matInput
           #searchInput
           [(ngModel)]="searchValue"
+          (keyup)="applyFilter($event.target.value)"
           [placeholder]="'global.search.text' | translate"
         />
         <mat-icon class="search-icon" matSuffix>search</mat-icon>
