change modal strategy to use content projection

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-dialog/common-dialog.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-dialog/common-dialog.component.html
@@ -5,8 +5,7 @@
   </mat-card-header>
 
   <mat-dialog-content class="child-content-container">
-    <!-- ng-template injected from params.childContentComponent -->
-    <ng-template #childContentComponentContainer></ng-template>
+    <ng-content></ng-content>
   </mat-dialog-content>
 
   <!-- bottom part of the dialog -->
