push up latest WIP

--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
@@ -42,7 +42,7 @@
     </div>
   </mat-drawer>
   <mat-drawer-content class="drawer__main-content">
-    <div class="drawer__main-content-header"></div>
+    <!-- <div class="drawer__main-content-header"></div> -->
     <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
