--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
@@ -1,6 +1,6 @@
 <app-common-root-page
-  title = "Feature Flag Root Page"
-  subtitle = "This is the Feature Flag Root Page" 
+  title = "feature-flags.title.text"
+  subtitle = "feature-flags.subtitle.text"
 > 
   <app-section-card-example msg="1"></app-section-card-example>
   <app-section-card-example msg="2"></app-section-card-example>
