--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
@@ -1,7 +1,4 @@
-<app-common-root-page
-  title = "feature-flags.title.text"
-  subtitle = "feature-flags.subtitle.text"
-> 
-  <app-section-card-example msg="1"></app-section-card-example>
-  <app-section-card-example msg="2"></app-section-card-example>
+<app-common-root-page>
+  <app-feature-flag-root-page-header header></app-feature-flag-root-page-header>
+  <app-feature-flag-overview-section-card content></app-feature-flag-overview-section-card>
 </app-common-root-page>
